@@ -7,6 +7,7 @@
  */
 
 $charset = 'utf-8';
+$allow_recoding = TRUE;
 $text_dir = 'ltr'; // ('ltr' for left to right, 'rtl' for right to left)
 $number_thousands_separator = '.';
 $number_decimal_separator = ',';
@@ -169,7 +170,7 @@ $strCreateNewDatabase = 'Izradi novu bazu podataka';
 $strCreateNewTable = 'Izradi novu tablicu u bazi podataka %s';
 $strCreatePage = 'Izradi novu stranicu';
 $strCreatePdfFeat = 'Izrada PDF datoteka';
-$strCreateRelation = 'Izradi povezanost';
+$strCreateRelation = 'Izradi relaciju';
 $strCreateTable  = 'Izradi tablicu';
 $strCreateUserDatabase = 'Baza podataka za korisnika';
 $strCreateUserDatabaseName = 'Izradi bazu podataka istog naziva i podari sve privilegije';
@@ -214,13 +215,13 @@ $strDeleteAndFlush = 'Izbriši korisnike i potom ponovo učitaj privilegije.';
 $strDeleted = 'Redak je izbrisan';
 $strDelete = 'Izbriši';
 $strDeleteNoUsersSelected = 'Nema odabranih korisnika za uklanjanje!';
-$strDeleteRelation = 'Izbriši povezanost';
+$strDeleteRelation = 'Izbriši relaciju';
 $strDeleting = 'Brisanje %s';
 $strDelimiter = 'Razgraničavanje';
 $strDelOld = 'Trenutna stranica sadrži reference prema tablicama koje više ne postoje. Želite li izbrisati te reference?';
 $strDescending = 'Silazno';
 $strDescription = 'Opis';
-$strDesignerHelpDisplayField = 'Polje pregledavanja prikazano je u rozoj boji. Kako biste za polje odabrali ili uklonili opciju polja za prikazivanje kliknite ikonu "Odaberite polje za prikazivanje", a zatim kliknite odgovarajući naziv polja.';
+$strDesignerHelpDisplayField = 'Polje pregledavanja prikazano je u rozoj boji. Kako biste za polje odabrali ili uklonili opciju polja za prikazivanje pritisnite ikonu "Odaberite polje za prikazivanje", a zatim pritisnite odgovarajući naziv polja.';
 $strDesigner = 'Kreator';
 $strDictionary = 'rječnik';
 $strDirectLinks = 'Izravne veze';
@@ -261,11 +262,11 @@ $strEnglish = 'Engleski';
 $strEnglishPrivileges = ' Napomena: Nazivi MySQL privilegija navedeni su na engleskom jeziku ';
 $strErrorInZipFile = 'Pogreška u ZIP arhivi:';
 $strError = 'Pogreška';
-$strErrorRelationAdded = 'Pogreška: Povezanost nije dodana.';
-$strErrorRelationExists = 'Pogreška: Povezanost već postoji.';
+$strErrorRelationAdded = 'Pogreška: Relacija nije dodana.';
+$strErrorRelationExists = 'Pogreška: Relacija već postoji.';
 $strErrorRenamingTable = 'Pogreška tijekom preimenovanja tablice %1$s u %2$s';
 $strErrorSaveTable = 'Pogreška tijekom spremanja koordinata za Kreatora.';
-$strEscapeWildcards = 'Da bi mogli biti upotrebljavani u doslovnom smislu, džokerima \_ i \% mora prethoditi znak \\';
+$strEscapeWildcards = 'Kako bi se mogli upotrebljavati u doslovnom smislu, džokerima \_ i \% mora prethoditi znak \\';
 $strEsperanto = 'Esperanto';
 $strEstonian = 'Estonski';
 $strEvent = 'Događaj';
@@ -332,7 +333,7 @@ $strHelp = 'Pomoć';
 $strHexForBLOB = 'Za BLOB upotrijebi heksadecimalno';
 $strHide         = 'Sakrij';
 $strHideShowAll = 'Prikaži / Sakrij sve';
-$strHideShowNoRelation = 'Prikaži / Sakrij tablice bez povezanosti';
+$strHideShowNoRelation = 'Prikaži / Sakrij tablice bez relacija';
 $strHomepageOfficial = 'Službena stranica programa phpMyAdmin';
 $strHome = 'Početna stranica';
 $strHostEmpty = 'Naziv računala je prazan!';
@@ -371,7 +372,7 @@ $strInnodbStat = 'InnoDB stanje';
 $strInsecureMySQL = 'Vaša konfiguracijska datoteka sadrži postavke (root korisnik bez lozinke) koja odgovara zadanom privilegiranom nalogu MySQL-a. Vaš MySQL poslužitelj pokrenut je sa zadanim postavkama i kao takav otvoren je upadima. Potrebno je ispraviti ovaj sigurnosni nedostatak.';
 $strInsertAsNewRow = 'Umetni kao novi redak';
 $strInsert = 'Umetni';
-$strInternalRelationAdded = 'Dodane interne povezanosti';
+$strInternalRelationAdded = 'Dodane interne relacije';
 $strInternalRelations = 'Interne relacije';
 $strInUse = 'u upotrebi';
 $strInvalidAuthMethod = 'Neispravan komplet načina provjere vjerodostojnosti u konfiguraciji:';
@@ -443,7 +444,7 @@ $strMIME_available_transform = 'Raspoloživa preoblikovanja';
 $strMIME_description = 'Opis';
 $strMIME_MIMEtype = 'MIME vrsta';
 $strMIME_nodescription = 'Za ovo preoblikovanje ne postoji raspoloživ opis.<br />Molimo da od autora zatražite objašnjenje rada %s .';
-$strMIME_transformation_note = 'Za popis raspoloživih opcija preoblikovanja i njihovih MIME vrsta oblikovanja, kliknite %sopcije preoblikovanja%s';
+$strMIME_transformation_note = 'Za popis raspoloživih opcija preoblikovanja i njihovih MIME vrsta oblikovanja, pritisnite %sopcije preoblikovanja%s';
 $strMIME_transformation_options_note = 'Unesite vrijednosti za opcije preoblikovanja upotrebom ovog oblika: \'a\', 100, b,\'c\'...<br />Ako je potrebno unijeti lijevu kosu crtu ("\") ili jednostruki navodnik ("\'") unutar ovih vrijednosti, ispred znaka stavite lijevu kosu crtu (na primjer: \'\\\\xyz\' ili \'a\\\'B\').';
 $strMIME_transformation_options = 'Opcije preoblikovanja';
 $strMIME_transformation = 'Pretvaranje preglednika';
@@ -627,8 +628,8 @@ $strRecords = 'Zapisi';
 $strReferentialIntegrity = 'Provjeri referencijalan integritet:';
 $strRefresh = 'Osvježi';
 $strRelationalSchema = 'Shema relacija';
-$strRelationDeleted = 'Povezanost je izbrisana';
-$strRelationNotWorking = 'Dodatne osobine za rad s povezanim tablicama su isključene. Da biste saznali zašto kliknite %sovdje%s.';
+$strRelationDeleted = 'Relacija je izbrisana';
+$strRelationNotWorking = 'Dodatne osobine za rad s relacijski tablicama su isključene. Kako biste saznali razloge, pritisnite %sovdje%s.';
 $strRelationsForTable = 'RELACIJE TABLICE';
 $strRelations = 'Relacije';
 $strRelationView = 'Prikaz relacija';
@@ -672,7 +673,7 @@ $strRussian = 'Ruski';
 $strSaveOnServer = 'Spremi na poslužitelju u mapi %s';
 $strSavePosition = 'Spremi položaj';
 $strSave = 'Spremi';
-$strScaleFactorSmall = 'Vrijednost omjera suviše je malen da bi shema stala na jednu stranicu';
+$strScaleFactorSmall = 'Vrijednost omjera suviše je malen kako bi shema stala na jednu stranicu';
 $strSearchFormTitle = 'Traži u bazi podataka';
 $strSearchInTables = 'Unutar tablica:';
 $strSearchNeedle = 'Riječi ili vrijednost za pretraživanje (džoker: "%"):';
@@ -725,7 +726,7 @@ $strShowSlaveHosts = 'Prikaži potčinjena računala';
 $strShowSlaveStatus = 'Prikaži stanje potčinjenog';
 $strShowStatusBinlog_cache_disk_useDescr = 'Broj transakcija koje su upotrebljavale privremeni binarni zapisnik pohrane, ali su nadmašile vrijednost binlog_cache_size i upotrijebile privremenu datoteku za pohranjivanje izjava transakcija.';
 $strShowStatusBinlog_cache_useDescr = 'Broj transakcija koje su upotrebljavale privremeni binarni zapisnik pohrane.';
-$strShowStatusCreated_tmp_disk_tablesDescr = 'Broj privremenih tablica koje poslužitelj automatski izrađuje na disku tijekom izvršavanja izjava. Ako je stavka Created_tmp_disk_tables velika, moglo bi biti potrebno da povećate vrijednost tmp_table_size, da biste privremene tablice smjestili u radnu memoriju, a ne na tvrdi disk.';
+$strShowStatusCreated_tmp_disk_tablesDescr = 'Broj privremenih tablica koje poslužitelj automatski izrađuje na disku tijekom izvršavanja izjava. Ako je stavka Created_tmp_disk_tables velika, moglo bi biti potrebno da povećate vrijednost tmp_table_size, kako biste privremene tablice smjestili u radnu memoriju, a ne na tvrdi disk.';
 $strShowStatusCreated_tmp_filesDescr = 'Koliko je privremenih tablica izradio mysqld.';
 $strShowStatusCreated_tmp_tablesDescr = 'Broj privremenih tablica u memoriji koje je poslužitelj automatski izradio tijekom izvršavanja izjava.';
 $strShowStatusDelayed_errorsDescr = 'Broj redaka upisanih pomoću naredbe INSERT DELAYED, a kod kojih je došlo do neke vrste pogreške (vjerojatan razlog je udvojen ključ).';
@@ -917,16 +918,16 @@ $strTime = 'Vrijeme';
 $strToFromPage = 'stranica od / prema';
 $strToggleScratchboard = 'Uključi bilješke';
 $strToggleSmallBig = 'Malo / Veliko';
-$strToSelectRelation = 'Za odabir povezanosti kliknite:';
+$strToSelectRelation = 'Za odabir relacije pritisnite:';
 $strTotalUC = 'Ukupno';
 $strTotal = 'ukupno';
 $strTraditionalChinese = 'Kineski, tradicionalan';
 $strTraditionalSpanish = 'Španjolski, tradicionalan';
 $strTraffic = 'Promet';
 $strTransactionCoordinator = 'Koordinator transakcije';
-$strTransformation_application_octetstream__download = 'Prikazuje vezu prema preuzimanju binarnih podataka polja. Možete upotrijebiti prvu opciju da biste sami odredili naziv datoteke ili drugu opciju da biste upotrijebili naziv polja koje sadrži naziv datoteke. Ako upotrijebite drugu opciju, u prvu opciju morate unijeti prazan niz.';
+$strTransformation_application_octetstream__download = 'Prikazuje vezu prema preuzimanju binarnih podataka polja. Možete upotrijebiti prvu opciju kako biste sami odredili naziv datoteke ili drugu opciju kako biste upotrijebili naziv polja koje sadrži naziv datoteke. Ako upotrijebite drugu opciju, u prvu opciju morate unijeti prazan niz.';
 $strTransformation_application_octetstream__hex = 'Prikazuje podatke u heksadecimalnom obliku. Opcionalan prvi parametar određuje koliko često će prazna mjesta biti dodavana (zadana vrijednost je 2).';
-$strTransformation_image_jpeg__inline = 'Prikazuje sličicu s mogućnošću klikanja. Opcije su najveća širina i visina u pikselima. Izvorne proporcije su očuvane.';
+$strTransformation_image_jpeg__inline = 'Prikazuje sličicu s mogućnošću pritiskanja. Opcije su najveća širina i visina u pikselima. Izvorne proporcije su očuvane.';
 $strTransformation_image_jpeg__link = 'Prikazuje vezu za preuzimanje ove slike.';
 $strTransformation_image_png__inline = 'Pogledajte slika/jpeg: inline';
 $strTransformation_text_plain__dateformat = 'Polja TIME (vrijeme), TIMESTAMP (vremenska oznaka), DATETIME (datum i vrijeme) ili brojčanu uniksoidnu oznaku vremena prikazuje kao oblikovani datum. Prva opcija je odmak (u satima) koji će biti pridodan vremenskoj oznaci (zadano: 0). Druga opcije određuje drukčiji oblik izražavanja datuma i vremena. Treća opcija određuje želite li prikazati lokalni datum ili u skladu s UTC (upotrijebite izraz "local" ili "utc"). Sukladno tome, oblik datuma ima različite vrijednosti - za opciju "local" pogledajte dokumentaciju o upotrebi PHP funkcije strftime(), a za "utc" pogledajte dokumentaciju o upotrebi funkcije gmdate().';
@@ -1006,75 +1007,72 @@ $strYes = 'Da';
 
 $strZeroRemovesTheLimit = 'Napomena: Postavljanje ovih opcija na vrijednost 0 (nula) uklanja ograničenje.';
 $strZip = '"zipano"';
-$strPartitionDefinition = 'PARTITION definition';  //to translate
-$strPrivDescTrigger = 'Allows creating and dropping triggers';  //to translate
-$strPrivDescEvent = 'Allows to set up events for the event scheduler';  //to translate
-$strPrivDescProcess = 'Allows viewing processes of all users';  //to translate
-$strPartitioned = 'partitioned';  //to translate
-$strTableAlteredSuccessfully = 'Table %1$s has been altered successfully';  //to translate
-$strDatabaseHasBeenCreated = 'Database %1$s has been created.';  //to translate
-$strTableHasBeenCreated = 'Table %1$s has been created.';  //to translate
-$strForeignKeyError = 'Error creating foreign key on %1$s (check data types)';  //to translate
-$strRowsDeleted = '%1$d row(s) deleted.';  //to translate
-$strRowsAffected = '%1$d row(s) affected.';  //to translate
-$strRowsInserted = '%1$d row(s) inserted.';  //to translate
-$strInsertedRowId = 'Inserted row id: %1$d';  //to translate
-$strIndexesSeemEqual = 'The indexes %1$s and %2$s seem to be equal and one of them could possibly be removed.';  //to translate
-$strPartitionMaintenance = 'Partition maintenance';  //to translate
-$strPartition = 'Partition %s';  //to translate
-$strAnalyze = 'Analyze';  //to translate
-$strCheck = 'Check';  //to translate
-$strOptimize = 'Optimize';  //to translate
-$strRebuild = 'Rebuild';  //to translate
-$strRepair = 'Repair';  //to translate
-$strRemovePartitioning = 'Remove partitioning';  //to translate
-$strSearchInField = 'Inside field:';  //to translate
-$strTexyText = 'Texy! text';  //to translate
-$strDetails = 'Details...';  //to translate
-$strComment = 'Comment';  //to translate
-$strPacked = 'Packed';  //to translate
-$strActions = 'Actions';  //to translate
-$strInterface = 'Interface';  //to translate
-$strSuhosin = 'Server running with Suhosin. Please refer to %sdocumentation%s for possible issues.';  //to translate
-$strEvents = 'Events';  //to translate
-$strForeignKeyRelationAdded = 'FOREIGN KEY relation added';  //to translate
-$strInternalAndForeign = 'An internal relation is not necessary when a corresponding FOREIGN KEY relation exists.';  //to translate
-$strViewHasAtLeast = 'This view has at least this number of rows. Please refer to %sdocumentation%s.';  //to translate
-$strRelationalKey = 'Relational key';  //to translate
-$strRelationalDisplayField = 'Relational display field';  //to translate
-$strSwekeyNoKey = 'No valid authentication key plugged';  //to translate
-$strSwekeyNoKeyId = 'File %s does not contain any key id';  //to translate
-$strSwekeyAuthFailed = 'Hardware authentication failed';  //to translate
-$strSwekeyAuthenticating = 'Authenticating...';  //to translate
-$strPBXTIndexCacheSize = 'Index cache size';  //to translate
-$strPBXTRecordCacheSize = 'Record cache size';  //to translate
-$strPBXTLogCacheSize = 'Log cache size';  //to translate
-$strPBXTLogFileThreshold = 'Log file threshold';  //to translate
-$strPBXTTransactionBufferSize = 'Transaction buffer size';  //to translate
-$strPBXTCheckpointFrequency = 'Checkpoint frequency';  //to translate
-$strPBXTDataLogThreshold = 'Data log threshold';  //to translate
-$strPBXTGarbageThreshold = 'Garbage threshold';  //to translate
-$strPBXTLogBufferSize = 'Log buffer size';  //to translate
-$strPBXTDataFileGrowSize = 'Data file grow size';  //to translate
-$strPBXTRowFileGrowSize = 'Row file grow size';  //to translate
-$strPBXTRowFileGrowSizeDesc = 'The grow size of the row pointer (.xtr) files.';  //to translate
-$strPBXTDataFileGrowSizeDesc = 'The grow size of the handle data (.xtd) files.';  //to translate
-$strPBXTLogBufferSizeDesc = 'The size of the buffer used when writing a data log. The default is 256MB. The engine allocates one buffer per thread, but only if the thread is required to write a data log.';  //to translate
-$strPBXTGarbageThresholdDesc = 'The percentage of garbage in a data log file before it is compacted. This is a value between 1 and 99. The default is 50.';  //to translate
-$strPBXTDataLogThresholdDesc = 'The maximum size of a data log file. The default value is 64MB. PBXT can create a maximum of 32000 data logs, which are used by all tables. So the value of this variable can be increased to increase the total amount of data that can be stored in the database.';  //to translate
-$strPBXTCheckpointFrequencyDesc = 'The amount of data written to the transaction log before a checkpoint is performed. The default value is 24MB.';  //to translate
-$strPBXTTransactionBufferSizeDesc = 'The size of the global transaction log buffer (the engine allocates 2 buffers of this size). The default is 1MB.';  //to translate
-$strPBXTLogFileThresholdDesc = 'The size of a transaction log before rollover, and a new log is created. The default value is 16MB.';  //to translate
-$strPBXTLogCacheSizeDesc = 'The amount of memory allocated to the transaction log cache used to cache on transaction log data. The default is 16MB.';  //to translate
-$strPBXTRecordCacheSizeDesc = 'This is the amount of memory allocated to the record cache used to cache table data. The default value is 32MB. This memory is used to cache changes to the handle data (.xtd) and row pointer (.xtr) files.';  //to translate
-$strPBXTIndexCacheSizeDesc = 'This is the amount of memory allocated to the index cache. Default value is 32MB. The memory allocated here is used only for caching index pages.';  //to translate
-$strPBXTLogFileCount = 'Log file count';  //to translate
-$strPBXTLogFileCountDesc = 'This is the number of transaction log files (pbxt/system/xlog*.xt) the system will maintain. If the number of logs exceeds this value then old logs will be deleted, otherwise they are renamed and given the next highest number.';  //to translate
-$strAsDefined = 'As defined:';  //to translate
-$strWiki = 'Wiki';  //to translate
-$strWebServer = 'Web server';  //to translate
-$strPHPExtension = 'PHP extension';  //to translate
-$strCustomColor = 'Custom color';  //to translate
+$strPartitionDefinition = 'Definicija PARTICIJE';
+$strPrivDescTrigger = 'Omogućuje izradu i uklanjanje okidača';
+$strPrivDescEvent = 'Omogućuje postavljanje događaja za planer';
+$strPrivDescProcess = 'Omogućuje pregledavanje procesa za sve korisnike';
+$strPartitioned = 'particionirano';
+$strTableAlteredSuccessfully = 'Tablica %1$s uspješno je izmijenjena.';
+$strDatabaseHasBeenCreated = 'Baza podataka %1$s uspješno je izrađena.';
+$strTableHasBeenCreated = 'Tablica %1$s je izrađena.';
+$strForeignKeyError = 'Pogreška tijekom izrade stranog ključa na %1$s (provjerite vrste podataka)';
+$strRowsDeleted = 'Izbrisano redaka: %1$d.';
+$strRowsAffected = 'Zahvaćeno redaka: %1$d.';
+$strRowsInserted = 'Umetnuto redaka: %1$d.';
+$strInsertedRowId = 'Umetnut ID retka: %1$d';
+$strIndexesSeemEqual = 'Indeksi %1$s i %2$s izgledaju jednakim i jednog od njih moguće je ukloniti.';
+$strPartitionMaintenance = 'Održavanje particije';
+$strPartition = 'Particija %s';
+$strAnalyze = 'Analiziraj';
+$strCheck = 'Provjeri';
+$strOptimize = 'Optimiziraj';
+$strRebuild = 'Ponovno izgradi';
+$strRepair = 'Popravi';
+$strRemovePartitioning = 'Ukloni particioniranje';
+$strSearchInField = 'Unutar polja:';
+$strTexyText = 'Texy! tekst';
+$strDetails = 'Detalji...';
+$strComment = 'Komentar';
+$strPacked = 'Pakirano';
+$strActions = 'Aktivnosti';
+$strInterface = 'Sučelje';
+$strSuhosin = 'Poslužitelj pokrenut sa Suhosin. Proučite %sdokumentaciju%s radi mogućih problema.';
+$strEvents = 'Događaji';
+$strForeignKeyRelationAdded = 'Dodana je relacija FOREIGN KEY';
+$strInternalAndForeign = 'Interna relacija nije potrebna ako postoji odgovarajuća relacija FOREIGN KEY.';
+$strViewHasAtLeast = 'Ovaj prikaz sadrži najmanje ovoliko redaka. Proučite %sdokumentaciju%s.';
+$strRelationalKey = 'Relacijski ključ';
+$strRelationalDisplayField = 'Polje za prikaz relacija';
+$strPBXTIndexCacheSize = 'Veličina pohrane indeksa';
+$strPBXTRecordCacheSize = 'Veličina pohrane zapisa';
+$strPBXTLogCacheSize = 'Veličina pohrane zapisnika';
+$strPBXTLogFileThreshold = 'Najveća veličina datoteke zapisnika';
+$strPBXTTransactionBufferSize = 'Veličina međuspremnika transakcije';
+$strPBXTCheckpointFrequency = 'Učestalost točke provjere';
+$strPBXTDataLogThreshold = 'Najveća veličina zapisnika podataka';
+$strPBXTGarbageThreshold = 'Najveća veličina otpada';
+$strPBXTLogBufferSize = 'Veličina međuspremnika zapisnika';
+$strPBXTDataFileGrowSize = 'Veličina porasta datoteke podataka';
+$strPBXTRowFileGrowSize = 'Veličina porasta datoteke redaka';
+$strPBXTRowFileGrowSizeDesc = 'Veličina porasta datoteka pokazivača retka (.xtr).';
+$strPBXTDataFileGrowSizeDesc = 'Veličina porasta rukovanim datotekama podataka (.xtr).';
+$strPBXTLogBufferSizeDesc = 'Veličina međuspremnika tijekom zapisivanja podataka zapisnika. Zadana vrijednost je 256 MB. Pogon dodjeljuje jedan međuspremnik po grani, ali samo ako je grana potrebna za zapisivanje zapisnika podataka.';
+$strPBXTGarbageThresholdDesc = 'Postotak otpada u datoteci zapisnika podataka prije sređivanja. Vrijednost može biti od 1 do 99. Zadana vrijednost je 50.';
+$strPBXTDataLogThresholdDesc = 'Najveća dopuštena veličina datoteke zapisnika podataka. Zadana vrijednost je 64 MB. PBXT može izraditi najviše 32.000 zapisnika koje koriste sve tablice. Vrijednost ove varijable može se povećati kako bi se povećao ukupan broj podataka koji se mogu pohraniti u bazu podataka.';
+$strPBXTCheckpointFrequencyDesc = 'Količina podataka zapisana u zapisnik transakcija prije izvođenja točke provjere. Zadana vrijednost je 24 MB.';
+$strPBXTTransactionBufferSizeDesc = 'Veličina globalnog međuspremnika zapisnika transakcija (pogon dodjeljuje 2 međuspremnika ove veličine). Zadana vrijednost je 1 MB.';
+$strPBXTLogFileThresholdDesc = 'Veličina zapisnika transakcija prije povrata i izrade novog zapisnika. Zadana vrijednost je 16 MB.';
+$strPBXTLogCacheSizeDesc = 'Količina memorije dodijeljena međuspremniku zapisnika transakcija. Zadana vrijednost je 16 MB.';
+$strPBXTRecordCacheSizeDesc = 'Količina memorije dodijeljena međuspremniku zapisnika koja se koristi za međuspremanje podataka tablice. Zadana vrijednost je 32 MB. Ova se memorija upotrebljava za međuspremanje izmjena u datotekama rukovanim podacima (.xtd) pokazivača retka (.xtr).';
+$strPBXTIndexCacheSizeDesc = 'Količina memorije dodijeljena međuspremniku indeksa. Zadana vrijednost je 32 MB. Ovdje dodijeljena memorija koristi se samo za međupohranjivanje stranica indeksa.';
+$strPBXTLogFileCount = 'Najveći broj datoteka zapisnika';
+$strPBXTLogFileCountDesc = 'Broj datoteka zapisnika transakcija (pbxt/system/xlog*.xt) koje će sustav održavati. Ako broj zapisnika premašuje ovu vrijednost, stari zapisnici bit će izbrisani. U protivnom se preimenuju i daje im se sljedeći veći redni broj.';
+$strAsDefined = 'Kako je definirano:';
+$strWiki = 'Wiki';
+$strWebServer = 'Web poslužitelj';
+$strPHPExtension = 'PHP ekstenzija';
+$strCustomColor = 'Prilagođena boja';
+
 $strBLOBRepository = 'BLOB Repository';  //to translate
 $strBLOBRepositoryDamaged = 'Damaged';  //to translate
 $strBLOBRepositoryDisableAreYouSure = 'Are you sure you want to disable all BLOB references for database %s?';  //to translate
@@ -1093,4 +1091,9 @@ $strViewVideo = 'View video';  //to translate
 $strDownloadFile = 'Download file';  //to translate
 $strLogServerHelp = 'You can enter hostname/IP address and port separated by space.';  //to translate
 $strShowKeys = 'Only show keys';  //to translate
+
+$strSwekeyNoKey = 'No valid authentication key plugged';  //to translate
+$strSwekeyNoKeyId = 'File %s does not contain any key id';  //to translate
+$strSwekeyAuthFailed = 'Hardware authentication failed';  //to translate
+$strSwekeyAuthenticating = 'Authenticating...';  //to translate
 ?>
